# mprpc

./: CMakeLists.txt  Makefile  README.md
example/: Makefile  cmake_install.cmake  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  Makefile  cmake_install.cmake  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: lockqueue.h  logger.h  mprpcapplication.h  rpcprovider.h
src/: CMakeLists.txt  Makefile  cmake_install.cmake  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: mprpcchannel.h  mprpcconfig.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
